--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,11 @@ nav {
 /* ------- Footer page ------- */
 
 footer {
-  box-sizing: border-box;
-  margin-top: 205px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 #footer {
@@ -69,30 +72,31 @@ footer {
 	font-family: 'Noto Sans JP', sans-serif;
 	font-size: 45px;
 	font-weight: 700;
+	padding: 20px 0px 20px 0px;
 }
 
 .contaiSim {
-	margin-top: 50px;
-	background-color: #fdffb6;
-	text-align: center;
+	margin-top: 45px;
+	background-color: #147862;
 	border-radius: 20px;
+	padding: 20px 30px 20px 30px;
 }
 
-.contaiCheck {
-	margin-top: 20px;
-	background-color: #fdffb6;
-	text-align: center;
+.contaiSim2 {
+	margin-top: 25px;
+	background-color: #147862;
 	border-radius: 20px;
+	padding: 20px 30px 20px 30px;
 }
 
-.separador {
-	margin: 25px 0px 25px 0px;
+.contaiSim3 {
+	margin-top: 25px;
+	margin-bottom: 100px;
+	background-color: #147862;
+	border-radius: 20px;
+	padding: 20px 30px 20px 30px;
 }
 
-.divis1 {
-	padding-top: 25px;
-}
-
-.divis2 {
-	padding-bottom: 25px
+.form-font {
+	font-size: 20px;
 }
