--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,11 @@ footer {
 	width: 25px;
 	height: 25px;
 }
+
+/*----- Boton info -------*/
+
+#info {
+	font-size: 25px;
+	border: none;
+	border-radius: 50px;
+}
